--- a/_projects/2014-03-01-talk-3.md
+++ b/_projects/2014-03-01-talk-3.md
@@ -1,6 +1,6 @@
 ---
 title: "Conference Proceeding talk 3 on Relevant Topic in Your Field"
-collection: Projects
+collection: projects
 type: "Conference proceedings talk"
 permalink: /projects/2014-03-01-talk-3
 venue: "Testing Institute of America 2014 Annual Conference"
